  allows in particular to map Coq lists and pairs onto Caml ones:  
    Extract Inductive list => list [ "[]" "(::)" ].
    Extract Inductive prod => "(*)" [ "(,)" ].
- In pattern matchings, a default pattern "| _ -> ..." is now used whenever 
  possible if several branches are identical. For instance, functions
  corresponding to decidability of equalities are now linear instead of 
  quadratic.

CoqIDE

- CoqIDE font defaults to monospace so as indentation to be meaningful.
- CoqIDE supports nested goals and any other kind of declaration in the middle 
  of a proof.
- Undoing non-tactic commands in CoqIDE works faster.
- New CoqIDE menu for activating display of various implicit informations.
- Added the possibility to choose the location of tabs in coqide:
  (in Edit->Preferences->Misc)
- New Open and Save As dialogs in CoqIDE which filter *.v files.

Tools

- New stand-alone .vo files verifier "coqchk".
- Extended -I coqtop/coqc option to specify a logical dir: "-I dir -as coqdir".
- New coqtop/coqc option -exclude-dir to exclude subdirs for option -R.
- The binary "parser" has been renamed to "coq-parser".

coqdoc
- Improved coqdoc and dump of globalization information to give more meta-information
  on identifiers. All categories of Coq definitions are supported, which makes
  typesetting trivial in the generated documentation. 
- A "--interpolate" option permits to use typesetting information from the 
  typechecked part of the file to typeset identifiers appearing in Coq escapings
  inside the documentation. 
- Better handling of utf8 ("--utf8" option) and respect of spaces in the source.
- Support for hyperlinking and indexing developments in the TeX output.
- New option "color" of the coqdoc style file to render identifiers using colors.
- Additional macros in the TeX ouput allowing to customize indentation and size of
  empty lines. New environment "coqdoccode" for Coq code.

Miscellaneous
